# python-project

./: LICENSE  README.md  pyproject.toml
src/PROJECT/: PROJECT.py
src/PROJECT_NAME/: MODULE_NAME.py
tests/: conftest.py  test_PROJECT.py
