[project]
name = "PROJECT"
version = "1.0"
authors = [{name = "Alex C Warren", email = "alexcwarren.info@gmail.com"}]
description = ""
requires-python = ">= 3.8"
dependencies = [
    "isort",
    "flake8",
    "black",
    "pytest",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/alexcwarren/PROJECT"

[tool.flake8]
max-line-length = 88
ignore = ['E203', 'W503']

[tool.black]
line-length = 89