[project]
name = "PROJECT"
version = "1.0"
authors = [{name = "AUTHOR", email = "EMAIL"}]
description = ""
requires-python = ">= 3.8"
dependencies = [
    "isort",
    "flake8",
    "Flake8-pyproject",
    "black",
    "pre-commit",
    "pytest",
    "mypy",
    "pydocstyle",
    "ruff",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "PROJECT_REPO"

[tool.flake8]
max-line-length = 89
ignore = ['E203', 'W503']

[tool.black]
line-length = 89